Fixed content overflowing by enlarging card size
* 'Wednesday' has most amount of characters, causing the 'open now'
tag to get pushed outside the card. This fix keeps info all in one line,
and always visible to users without scrolling.

--- a/src/components/WorkSpace/WorkSpace.scss
+++ b/src/components/WorkSpace/WorkSpace.scss
@@ -3,8 +3,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 280px;
-  height: 200px;
+  width: 295px;
+  height: 210px;
   background: linear-gradient(to right, #4775FF, #4775FF 33px, #FFF 30px, #FFF 66.66%, #FFF 66.66%);
   background-color: #FFFFFF;
   border-radius: 10px;
